<resources>
    <string name="app_name">STM</string>
    <string name="add_assignment_button">ADD ASSIGNMENT</string>
    <string name="task_name">Task Name</string>
    <string name="enter_title">Enter a name for the task</string>
    <string name="enter_course">Enter a course or subject for the task</string>
    <string name="date_due_select">Select the due date </string>
    <string name="date_personal_select">Select the personal due date</string>
    <string name="course_name">Course Name</string>
    <string name="ok_task">Add Task</string>
    <string name="priority_select">Select a priority for the task</string>
    <string name="course_subject_prompt">Course / Subject</string>
    <string name="due_date_prompt">Due Date</string>
    <string name="personal_date_prompt">Personal Deadline</string>
    <string name="priority_prompt">Priority</string>
    <string name="placeholder_info"> --- </string>
    <string name="alerts_prompt"> Alerts </string>
    <string name="task_list"> Task List </string>
    <string name="new_task"> New Task </string>
    <string name="date"> Date </string>
    <string name="time"> Time </string>
    <string name="reminder_prompt"> Reminder Time </string>
    <string name="content_desc"> TODO </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_prompt">Welcome to  \n Student Task Manager (STM) </string>
    <string name="notification_channel_name"> Daily Task Reminder </string>
    <string name="notification_channel_name2"> Task Reminders </string>
    <string name="daily_reminder_title">STM Daily Reminder</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_task">Edit Task</string>

    <string-array name="priority_array">
        <item>Low Priority</item>
        <item>Medium Priority</item>
        <item>High Priority</item>
    </string-array>

    <string-array name="sort_array">
        <item>Incomplete</item>
        <item>Completed</item>
        <item>By Due Date</item>
        <item>By Personal Due Date</item>
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
        <item>Course / Subject </item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>